Updated site contents

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Cases by County</h1>
+    <h1>Washington State COVID-19 Data</h1>
     <table>
+        <caption><strong>Confirmed Cases Per County</strong></caption>
         <tr>
             <th>County</th>
             <th>Confirmed Cases</th>
@@ -20,8 +21,15 @@
             <td>648</td>
         </tr>
     </table>
-    <a href="https://coronavirus-map.com/">Link to COVID-19 Map from JHU</a>
+    <h2>Other Resources</h2>
+    <ul>
+        <li>
+            <a href="https://github.com/DavisFairchild/COVID-data-website">COVID-19 Map from JHU</a>
+        </li>
+        <li>
+            <a href="">Github Repository</a>
+        </li>
+    </ul>
     <img src="washington_state.jpg" alt="washington state map">
 </body>
-
 </html>
