--- a/index.html
+++ b/index.html
@@ -5,31 +5,35 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Washington State COVID-19 Data</h1>
-    <table>
-        <caption><strong>Confirmed Cases Per County</strong></caption>
-        <tr>
-            <th>County</th>
-            <th>Confirmed Cases</th>
-        </tr>
-        <tr>
-            <td>King County</td>
-            <td>8318</td>
-        </tr>
-        <tr>
-            <td>Spokane County</td>
-            <td>648</td>
-        </tr>
-    </table>
-    <h2>Other Resources</h2>
-    <ul>
-        <li>
-            <a href="https://github.com/DavisFairchild/COVID-data-website">COVID-19 Map from JHU</a>
-        </li>
-        <li>
-            <a href="">Github Repository</a>
-        </li>
-    </ul>
-    <img src="washington_state.jpg" alt="washington state map">
+    <header><h1>Washington State COVID-19 Data</h1></header>
+    <section>
+        <table>
+            <caption><strong>Confirmed Cases Per County</strong></caption>
+            <tr>
+                <th>County</th>
+                <th>Confirmed Cases</th>
+            </tr>
+            <tr>
+                <td>King County</td>
+                <td>8318</td>
+            </tr>
+            <tr>
+                <td>Spokane County</td>
+                <td>648</td>
+            </tr>
+        </table>
+    </section>
+    <section>
+        <h2>Other Resources</h2>
+        <ul>
+            <li>
+                <a href="https://github.com/DavisFairchild/COVID-data-website">COVID-19 Map from JHU</a>
+            </li>
+            <li>
+                <a href="">Github Repository</a>
+            </li>
+        </ul>
+        <img src="washington_state.jpg" alt="washington state map">
+    </section>
 </body>
 </html>
