Fixed hyperlink destinations

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
         <h2>Other Resources</h2>
         <ul>
             <li>
-                <a href="https://github.com/DavisFairchild/COVID-data-website">COVID-19 Map from JHU</a>
+                <a href="https://github.com/DavisFairchild/COVID-data-website">Github Repository</a>
             </li>
             <li>
-                <a href="">Github Repository</a>
+                <a href="https://coronavirus-map.com/">COVID-19 Map from JHU</a>
             </li>
         </ul>
         <img src="washington_state.jpg" alt="washington state map">
