Added navigation bar and more styling

--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header><h1>Washington State COVID-19 Data</h1></header>
-    <section>
+    <header class="content"><h1>Washington State COVID-19 Data</h1></header>
+    <nav class="content">
+        <a href="index.html">Home</a>
+        <a href="more_info.html">More Information</a>
+    </nav>
+    <section class="content">
         <table>
             <caption><strong>Confirmed Cases Per County</strong></caption>
             <tr>
@@ -23,7 +27,7 @@
             </tr>
         </table>
     </section>
-    <section>
+    <section class="content">
         <h2>Other Resources</h2>
         <ul>
             <li>
