Added background image, updated div to nav

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <div id="topnav" class="topnav">
+    <nav id="topnav" class="topnav">
         <a id="TopNav1" href="www.google.com" style="text-decoration:none">TopNav Item 1</a>
         <a id="TopNav2" href="www.google.com" style="text-decoration:none">TopNav Item 2</a>
         <a id="TopNav3" href="www.google.com" style="text-decoration:none">TopNav Item 3</a>
-    </div>
+    </nav>
     <title>Washington State COVID-19 Data</title>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -45,7 +45,6 @@
                 <a href="https://coronavirus-map.com/">COVID-19 Map from JHU</a>
             </li>
         </ul>
-        <img src="washington_state.jpg" alt="washington state map">
         <!-- blank map: https://commons.wikimedia.org/wiki/File:Simplified_blank_world_map_without_Antartica_(no_borders).svg -->
         <img src="blank-world-map.png" alt="world map" id="I_forgot_how_to_select_alt_in_css">
     </section>
