Updated table style

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </ul>
     </nav>
     <section class="content">
-        <table>
+        <table class="table">
             <caption><strong>Confirmed Cases Based On Kevin's Random Numbers</strong></caption>
             <tr>
                 <th>County</th>
