Removed table of contents, updated nav bar

--- a/index.html
+++ b/index.html
@@ -2,24 +2,19 @@
 <html lang="en">
 <head>
     <nav id="topnav" class="topnav">
-        <a id="TopNav1" href="www.google.com" style="text-decoration:none">TopNav Item 1</a>
-        <a id="TopNav2" href="www.google.com" style="text-decoration:none">TopNav Item 2</a>
-        <a id="TopNav3" href="www.google.com" style="text-decoration:none">TopNav Item 3</a>
+        <a id="TopNav1" href="index.html" style="text-decoration:none">TopNav Item 1</a>
+        <a id="TopNav2" href="index.html" style="text-decoration:none">TopNav Item 2</a>
+        <a id="TopNav3" href="index.html" style="text-decoration:none">TopNav Item 3</a>
     </nav>
     <title>Washington State COVID-19 Data</title>
+    <!--Setting the viewport for different sized devices-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header class="sorryNotSorry"><h1>Washington State COVID-19 Data</h1></header>
-    <nav class="content">
-        <a>Table of Content:</a>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="more_info.html">More Information</a></li>
-        </ul>
-    </nav>
     <section class="content">
-        <table class="table">
+        <table>
             <caption><strong>Confirmed Cases Based On Kevin's Random Numbers</strong></caption>
             <tr>
                 <th>County</th>
