--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </li>
         </ul>
         <!-- blank map: https://commons.wikimedia.org/wiki/File:Simplified_blank_world_map_without_Antartica_(no_borders).svg -->
-        <img src="blank-world-map.png" alt="world map" id="I_forgot_how_to_select_alt_in_css">
+        <img src="images/blank-world-map.png" alt="world map" id="I_forgot_how_to_select_alt_in_css">
     </section>
     <section class="content">
         <h2><u>About</u></h2>
@@ -49,7 +49,7 @@
             one of the friends realized the other one needed <i>something</i> they could put on their resume and so he got him to actually do this stuff.
         </a>
     </section>
-    <!-- Javascript
-    <script src="script.js"></script> -->
+    <!-- Javascript -->
+    <script src="script.js"></script>
 </body>
 </html>
