JSON object retrieved from API

--- a/index.html
+++ b/index.html
@@ -6,27 +6,28 @@
         <a id="TopNav2" href="index.html" style="text-decoration:none">TopNav Item 2</a>
         <a id="TopNav3" href="index.html" style="text-decoration:none">TopNav Item 3</a>
     </nav>
-    <title>Washington State COVID-19 Data</title>
+    <title>World COVID-19 Data</title>
     <!--Setting the viewport for different sized devices-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header class="sorryNotSorry"><h1>Washington State COVID-19 Data</h1></header>
+    <header class="sorryNotSorry"><h1>World COVID-19 Data</h1></header>
     <section class="content">
         <table>
             <caption><strong>Confirmed Cases Based On Kevin's Random Numbers</strong></caption>
             <tr>
-                <th>County</th>
+                <th>Country</th>
                 <th>"Confirmed" Cases</th>
             </tr>
             <tr>
-                <td>King County</td>
+                <td>South Africa</td>
                 <td>8318</td>
             </tr>
             <tr>
-                <td>Spokane County</td>
-                <td>648</td>
+                <td>United States</td>
+                <td>2 million something</td>
             </tr>
         </table>
     </section>
