Updating table values with API data

--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
     <header class="sorryNotSorry"><h1>World COVID-19 Data</h1></header>
     <section class="content">
         <table>
-            <caption><strong>Confirmed Cases Based On Kevin's Random Numbers</strong></caption>
+            <caption><strong>Confirmed Cases by Country</strong></caption>
             <tr>
                 <th>Country</th>
-                <th>"Confirmed" Cases</th>
+                <th>Confirmed Cases</th>
             </tr>
             <tr>
-                <td>South Africa</td>
-                <td>8318</td>
+                <td id="firstCountry">Country 1</td>
+                <td id="firstCountryCases">Confirmed 1</td>
             </tr>
             <tr>
-                <td>United States</td>
-                <td>2 million something</td>
+                <td id="secondCountry">Country 2</td>
+                <td id="secondCountryCases">Confirmed 2</td>
             </tr>
         </table>
     </section>
@@ -36,6 +36,9 @@
         <ul>
             <li>
                 <a href="https://github.com/DavisFairchild/COVID-data-website">Github Repository</a>
+            </li>
+            <li>
+                <a href="https://covid19-api.org/api/status">COVID-19 API Data Used</a>
             </li>
             <li>
                 <a href="https://coronavirus-map.com/">COVID-19 Map from JHU</a>
