Added Odin Project as a resource

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <a href="https://covid19-api.org/api/status">COVID-19 API Data Used</a>
             </li>
             <li>
-                <a href="https://coronavirus-map.com/">COVID-19 Map from JHU</a>
+                <a href="https://www.theodinproject.com/">The Odin Project</a>
             </li>
         </ul>
         <!-- blank map: https://commons.wikimedia.org/wiki/File:Simplified_blank_world_map_without_Antartica_(no_borders).svg -->
