oriented table headers. too tired to continue. i blame family friends for coming over and delaying me with Rumikub

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </nav>
     <title>World COVID-19 Data</title>
     <!--Setting the viewport for different sized devices-->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--what is happening here?-->
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -18,8 +18,8 @@
         <table>
             <caption><strong>Confirmed Cases by Country</strong></caption>
             <tr>
-                <th>Country</th>
-                <th>Confirmed Cases</th>
+                <th style="text-align:left;">Country</th>
+                <th style="text-align:left;">Confirmed Cases</th>
             </tr>
             <tr>
                 <td id="firstCountry">Country 1</td>
