Improved data retrieval process

--- a/index.html
+++ b/index.html
@@ -16,18 +16,62 @@
     <header class="sorryNotSorry"><h1>World COVID-19 Data</h1></header>
     <section class="content">
         <table>
-            <caption><strong>Confirmed Cases by Country</strong></caption>
-            <tr>
+            <caption style="text-align:left";><strong>Confirmed Cases by Country</strong></caption>
+            <tr class=rowHeader>
                 <th style="text-align:left;">Country</th>
                 <th style="text-align:left;">Confirmed Cases</th>
             </tr>
-            <tr>
-                <td id="firstCountry">Country 1</td>
-                <td id="firstCountryCases">Confirmed 1</td>
+            <tr class=rowData>
+                <td>Country 1</td>
+                <td>Confirmed 1</td>
             </tr>
-            <tr>
-                <td id="secondCountry">Country 2</td>
-                <td id="secondCountryCases">Confirmed 2</td>
+            <tr class=rowData>
+                <td>Country 2</td>
+                <td>Confirmed 2</td>
+            </tr>
+            <tr class=rowData>
+                <td>Country 2</td>
+                <td>Confirmed 2</td>
+            </tr>
+            <tr class=rowData>
+                <td>Country 2</td>
+                <td>Confirmed 2</td>
+            </tr>
+            <tr class=rowData>
+                <td>Loading Data</td>
+                <td>Loading Data</td>
+            </tr>
+            <tr class=rowData>
+                <td>Loading Data</td>
+                <td>Loading Data</td>
+            </tr>
+            <tr class=rowData>
+                <td>Loading Data</td>
+                <td>Loading Data</td>
+            </tr>
+            <tr class=rowData>
+                <td>Loading Data</td>
+                <td>Loading Data</td>
+            </tr>
+            <tr class=rowData>
+                <td>Loading Data</td>
+                <td>Loading Data</td>
+            </tr>
+            <tr class=rowData>
+                <td>Loading Data</td>
+                <td>Loading Data</td>
+            </tr>
+            <tr class=rowData>
+                <td>Loading Data</td>
+                <td>Loading Data</td>
+            </tr>
+            <tr class=rowData>
+                <td>Loading Data</td>
+                <td>Loading Data</td>
+            </tr>
+            <tr class=rowData>
+                <td>Loading Data</td>
+                <td>Loading Data</td>
             </tr>
         </table>
     </section>
