selecting rows is a pain

--- a/index.html
+++ b/index.html
@@ -18,59 +18,58 @@
         <table>
             <caption style="text-align:left";><strong>Confirmed Cases by Country</strong></caption>
             <tr class=rowHeader>
+                <th style="text-align:left;">Date Updated</th>
                 <th style="text-align:left;">Country</th>
                 <th style="text-align:left;">Confirmed Cases</th>
             </tr>
             <tr class=rowData>
-                <td>Country 1</td>
-                <td>Confirmed 1</td>
-            </tr>
-            <tr class=rowData>
-                <td>Country 2</td>
-                <td>Confirmed 2</td>
-            </tr>
-            <tr class=rowData>
-                <td>Country 2</td>
-                <td>Confirmed 2</td>
-            </tr>
-            <tr class=rowData>
-                <td>Country 2</td>
-                <td>Confirmed 2</td>
-            </tr>
-            <tr class=rowData>
                 <td>Loading Data</td>
+                <td id="C0">Loading Data</td>
                 <td>Loading Data</td>
             </tr>
             <tr class=rowData>
                 <td>Loading Data</td>
+                <td id="C1" class="country">Loading Data</td>
                 <td>Loading Data</td>
             </tr>
             <tr class=rowData>
                 <td>Loading Data</td>
+                <td id="C2" class="country">Loading Data</td>
                 <td>Loading Data</td>
             </tr>
             <tr class=rowData>
                 <td>Loading Data</td>
+                <td id="C3" class="country">Loading Data</td>
                 <td>Loading Data</td>
             </tr>
             <tr class=rowData>
                 <td>Loading Data</td>
+                <td id="C4" class="country">Loading Data</td>
                 <td>Loading Data</td>
             </tr>
             <tr class=rowData>
                 <td>Loading Data</td>
+                <td id="C5" class="country">Loading Data</td>
                 <td>Loading Data</td>
             </tr>
             <tr class=rowData>
                 <td>Loading Data</td>
+                <td id="C6" class="country">Loading Data</td>
                 <td>Loading Data</td>
             </tr>
             <tr class=rowData>
                 <td>Loading Data</td>
+                <td id="C7" class="country">Loading Data</td>
                 <td>Loading Data</td>
             </tr>
             <tr class=rowData>
                 <td>Loading Data</td>
+                <td id="C8" class="country">Loading Data</td>
+                <td>Loading Data</td>
+            </tr>
+            <tr class=rowData>
+                <td>Loading Data</td>
+                <td id="C9" class="country">Loading Data</td>
                 <td>Loading Data</td>
             </tr>
         </table>
