Dynamically creating data table via script.js

--- a/index.html
+++ b/index.html
@@ -14,65 +14,7 @@
 </head>
 <body>
     <header class="sorryNotSorry"><h1>World COVID-19 Data</h1></header>
-    <section class="content">
-        <table>
-            <caption style="text-align:left";><strong>Confirmed Cases by Country</strong></caption>
-            <tr class=rowHeader>
-                <th style="text-align:left;">Date Updated</th>
-                <th style="text-align:left;">Country</th>
-                <th style="text-align:left;">Confirmed Cases</th>
-            </tr>
-            <tr class=rowData>
-                <td>Loading Data</td>
-                <td id="C0">Loading Data</td>
-                <td>Loading Data</td>
-            </tr>
-            <tr class=rowData>
-                <td>Loading Data</td>
-                <td id="C1" class="country">Loading Data</td>
-                <td>Loading Data</td>
-            </tr>
-            <tr class=rowData>
-                <td>Loading Data</td>
-                <td id="C2" class="country">Loading Data</td>
-                <td>Loading Data</td>
-            </tr>
-            <tr class=rowData>
-                <td>Loading Data</td>
-                <td id="C3" class="country">Loading Data</td>
-                <td>Loading Data</td>
-            </tr>
-            <tr class=rowData>
-                <td>Loading Data</td>
-                <td id="C4" class="country">Loading Data</td>
-                <td>Loading Data</td>
-            </tr>
-            <tr class=rowData>
-                <td>Loading Data</td>
-                <td id="C5" class="country">Loading Data</td>
-                <td>Loading Data</td>
-            </tr>
-            <tr class=rowData>
-                <td>Loading Data</td>
-                <td id="C6" class="country">Loading Data</td>
-                <td>Loading Data</td>
-            </tr>
-            <tr class=rowData>
-                <td>Loading Data</td>
-                <td id="C7" class="country">Loading Data</td>
-                <td>Loading Data</td>
-            </tr>
-            <tr class=rowData>
-                <td>Loading Data</td>
-                <td id="C8" class="country">Loading Data</td>
-                <td>Loading Data</td>
-            </tr>
-            <tr class=rowData>
-                <td>Loading Data</td>
-                <td id="C9" class="country">Loading Data</td>
-                <td>Loading Data</td>
-            </tr>
-        </table>
+    <section id="countryTableSection" class="content">
     </section>
     <section class="content">
         <h2>Other Resources</h2>
